codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__goal_menu_loop_history.snap
---
source: tui/src/chatwidget/tests/goal_menu.rs
expression: rendered_goal_summary(&mut rx)
---
Goal
Status: active
Super loop: off
Objective: Keep improving the bare goal command until it feels calm and useful.
Time used: 1m
Tokens used: 12.5K
Token budget: 80K
Loop: cycle 3 - web research loop - completed
Last loop: Web research loop completed
Loop history
  #3 web research loop completed: Web research loop completed
    verified 2 goal follow-ups
  #2 plan loop completed: Planned 1 research follow-up

Commands: /goal edit, /goal pause, /superloop <objective>, /goal clear
